plantuml 1.9.2; fixed plantuml markdown config
Plugin was updated to v2 and renamed

--- a/source/mkdocs.yml
+++ b/source/mkdocs.yml
@@ -60,7 +60,7 @@ markdown_extensions:
     # Extra extensions
     - markdown_include.include:
         base_path: inc  
-    - plantuml
+    - plantuml-markdown
     - mdx_custom_span_class
 
 plugins:
