--- a/source/mkdocs.yml
+++ b/source/mkdocs.yml
@@ -13,6 +13,7 @@ theme:
 
 extra_css:
     - _css/extra.css
+    - _css/pdf.css
 
 extra_javascript:
   - 'https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML'    
@@ -76,5 +77,3 @@ plugins:
 nav:
 - Home: index.md
 - Demonstration: demo.md
-- About:
-    - Overview: about/overview.md
