--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
 mkdocs==1.0.4
-mkdocs-material==4.5.1
-plantuml-markdown==3.1.4
+mkdocs-material==4.6.0
+plantuml-markdown==3.2.1
 
 markdown-include==0.5.1
 mkdocs-exclude==1.0.2
-mkdocs-macros-plugin==0.3.2
+mkdocs-macros-plugin==0.3.3
 
 mkdocs-pdf-export-plugin==0.5.5
-
-git+https://github.com/exaroth/mdx_custom_span_class.git
+mdx-custom-span-class==1.1.2
