--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 mkdocs==1.1.2
-mkdocs-material==6.2.5
+mkdocs-material==6.2.6
 plantuml-markdown==3.4.2
 
 markdown-include==0.6.0
@@ -7,3 +7,4 @@ mkdocs-exclude==1.0.2
 mkdocs-macros-plugin==0.5.0
 
 mkdocs-pdf-export-plugin==0.5.8
+mkdocs-print-site-plugin==1.0.0
