--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 mkdocs==1.1.2
-git+https://github.com/squidfunk/mkdocs-material
+mkdocs-material==6.2.8
 plantuml-markdown==3.4.2
 
 markdown-include==0.6.0
